# devdocs-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  GEMINI.md  README.md  database-design.md  docker-compose.yml  skills-lock.json  start.sh  supervisord.conf
backend/: .dockerignore  Dockerfile  README.md  agent copy.py  agent.py  debug_stream.py  main.py  pyproject.toml  router.py  schema.py
backend/core/: config.py  logger.py  state.py
backend/docs/: 12-factor-app-priniciple.md  200-vs-201-vs-202.md  301-vs-302.md  429-vs-503.md  ACID.md  ACL-and-Rule-Engine.md  Backpressure.md  CAP.md  CDC.md  CDN.md  CQRS.md  CRDT.md  Caching.md  Cassandra.md  DASH.md  DDOS-Protection.md  DIP-vs-LSP.md  DOD.md  HA-clusters.md  HDFS.md  HLS.md  IOPS.md  L4-vs-L7.md  LSP.md  Load-Balancer.md  MVCC.md  NFR.md  OAuth2.md  OCP.md  OT-vs-CRDTs.md  OWASP.md  OptimisticLockException.md  Outbox-pattern-and-ops-dashboard.md  POC.md  PWA.md  Partition-Tolerence.md  PgBouncer.md  Resiliency.md  SAST-vs-DAST.md  SLOs-vs-SLAs.md  (+166 more)
backend/utils/: auth.py  file_handler.py  handler.py  streaming.py  tools.py
frontend/: .dockerignore  .env.local  AGENTS.md  Dockerfile  next.config.ts  nginx.conf  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/chat/: ChatSidebar.tsx  ToolCallCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useChatHistory.ts
frontend/src/lib/: api.ts
nginx/: nginx.conf
(+11 files in other folders)
